# imsg-mcp

./: .env.ai  .env.example  .env.local  .env.native  .env.test  .eslintrc.cjs  .gitattributes  .gitignore  .mcp.json  .npmignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  dxt-manifest.json  llms-install.md  manifest.json  mcp.json  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.cursor/: mcp.json
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
docs/: CONTACT_MERGE_AND_SLUGS.md  DEFERRED_TASKS.md  GUARDRAILS_MCP_RESPONSES.md  HANDOFF_v1.4.2.md  ICLOUD_API_RESEARCH.md  IMESSAGE_DB_SCHEMA.md  INCIDENT_TRACE_2026-02-15_SINGLE_DIGIT_INTERPRETATION.md  MONOREPO_MIGRATION.md  RECONCILIATION_UI_VS_MCP.md  RESEARCH_IMESSAGE_PROTOCOL_AND_IMPLEMENTATIONS.md  SCREENSHOTS.md  STATUS.md  TOOLS.md  WORKFLOWS.md  applescript-examples.md
env-data/: chat.db  slugs.db  slugs.db-shm  slugs.db-wal
native/: Cargo.toml  package.json
native/src/: attributed_body.rs  contacts.rs  db.rs  lib.rs  types.rs
scripts/: cli-console.ts  compare-contacts-vcf.ts  debug-console.ts  generate-fixtures.ts  manual-test.ts  mcp-dev-proxy.ts  perf-compare.ts  stress-mcp.ts  stress-tui-workload.ts  stress-tui.ts  sync-env-data.ts  sync-manifest-version.mjs  test-contacts.ts  test-mcp-tools.ts
src/: access-check.ts  analytics-cache.ts  analytics-render.ts  analytics.ts  app-config.ts  applescript.ts  (+50 more)
(+220 files in other folders)
